--- a/Manufacturing.WinApp.csproj
+++ b/Manufacturing.WinApp.csproj
@@ -260,6 +260,10 @@
       <SpecificVersion>False</SpecificVersion>
       <HintPath>..\Manufacturing.DevRunner\packages\Newtonsoft.Json.6.0.4\lib\netcore45\Newtonsoft.Json.dll</HintPath>
     </Reference>
+    <Reference Include="protobuf-net, Version=2.0.0.668, Culture=neutral, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>..\Manufacturing.DevRunner\packages\protobuf-net.2.0.0.668\lib\netcore45\protobuf-net.dll</HintPath>
+    </Reference>
     <Reference Include="System.Net.Http.Extensions, Version=2.1.10.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
       <HintPath>..\Manufacturing.DevRunner\packages\Microsoft.Net.Http.2.1.10\lib\win8\System.Net.Http.Extensions.dll</HintPath>
