--- a/packages.config
+++ b/packages.config
@@ -8,5 +8,6 @@
   <package id="Microsoft.Net.Http" version="2.1.10" targetFramework="win81" />
   <package id="Newtonsoft.Json" version="6.0.4" targetFramework="win81" />
   <package id="Prism.StoreApps" version="1.1.0" targetFramework="win81" />
+  <package id="protobuf-net" version="2.0.0.668" targetFramework="win81" />
   <package id="WinRTXamlToolkit" version="1.6.1.3" targetFramework="win81" />
 </packages>
